# SoundSwitch

./: LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.vue  global.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  icon_gen.rs  lib.rs  main.rs  tray.rs
src-tauri/src/audio/: device.rs  mod.rs  policy.rs
src/components/: DeviceList.vue
src/services/: invoke.ts
